static/css/custom.css
body.hack.dark.main, body *
{
    font-family: 'Source Code Pro', monospace !important;
}

.hacker-logo
{
    width: 80%;
    opacity: .85;
    padding-bottom: 1rem;
    display: block;
    margin: 0 auto;
}

.under-construction
{
    display: none;
    margin: 1rem 0;
    background-color: rgba(0,0,255,.5);
    text-align: center;
}

.under-construction strong
{
    color: cyan !important;
}

@keyframes blink
{
    0% { visibility: visible; }
    50% { visibility: hidden; }
    100% { visibility: hidden; }
}

p:before, h1:before, .carret:before
{
    content: "> ";
}

.carret:after
{
    content: "";
    display: inline-block;
    height: 1rem;
    background-color: #ccc;
    width: 9px;
    position: relative;
    top: 2px;
    animation: blink .5s linear infinite alternate;
}

a
{
    color: unset !important;
    border-bottom-color: #ccc;
}

.muted a
{
    border-bottom-color: #7e7e7e;
}

.asci-logo
{
    font-size: -3;
}

.muted a[href*="//"]::after {
  /* data uri svg icon. thanks to @Fastidious for the idea */
  content: " " url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20class='i-external'%20viewBox='0%200%2032%2032'%20width='14'%20height='14'%20fill='none'%20stroke='%237e7e7e'%20stroke-linecap='round'%20stroke-linejoin='round'%20stroke-width='9.38%'%3E%3Cpath%20d='M14%209%20L3%209%203%2029%2023%2029%2023%2018%20M18%204%20L28%204%2028%2014%20M28%204%20L14%2018'/%3E%3C/svg%3E");
}

.muted a:hover
{
    background-color: #7e7e7e;
}

a:hover
{
    background-color: #ccc;
    color: #000 !important;
}

a[href*="//"]:hover::after {
  /* data uri svg icon. thanks to @Fastidious for the idea */
  content: " " url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20class='i-external'%20viewBox='0%200%2032%2032'%20width='14'%20height='14'%20fill='none'%20stroke='%23000000'%20stroke-linecap='round'%20stroke-linejoin='round'%20stroke-width='9.38%'%3E%3Cpath%20d='M14%209%20L3%209%203%2029%2023%2029%2023%2018%20M18%204%20L28%204%2028%2014%20M28%204%20L14%2018'/%3E%3C/svg%3E");
}

a[itemprop="url"] {
  text-transform: lowercase;
}

nav a.active {
  background-color: unset;
  border-bottom-color: transparent;
}

h1.menu-item__active
{
    display: inline;
    padding: 0;
    overflow: unset;
    text-transform: lowercase;
}

h1.menu-item__active::after
{
    content: "";
}

h1.menu-item__active::before
{
    content: "";
}

